# figcone_xml

./: CMakeLists.txt
.github/workflows/: release.yml
release_pack/: CMakeLists.txt  release.sh
release_pack/figcone_xml_deps/: CMakeLists.txt
src/: parser.cpp
tests/: CMakeLists.txt
